cinnamon: GWL set fixed font size for window count badge (#20)
so that it isn't too big with user font scaling

--- a/src/Mint-L/cinnamon/sass/_common.scss
+++ b/src/Mint-L/cinnamon/sass/_common.scss
@@ -1797,6 +1797,7 @@ $base_padding: 7px;
   }
 
   &-number-label {
+    font-size: 11px;
     z-index: 99;
     color: $tooltip_border_color;
   }
